2012-02-08  Christian Franke  <franke@computer.org>

	* include/sys/wait.h: Remove C++ inline functions for `union wait'.
	For C++ use `void *' as __wait_status_ptr_t instead.  This is less type
	safe but fixes compile error on `wait(NULL)'.  Remove extra `;'.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* sigproc.cc (child_info_fork::abort): Call TerminateProcess rather
	than ExitProcess.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::env_userprofile): Simplify since network
	drives are not supported here.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::env_userprofile): Convert native
	userprofile path returned from get_registry_hive_path to Win32 path.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc: Throughout, drop usage of modname in favor of name.
	(dll_list::find_by_modname): Remove.
	(dll_list::alloc): Only store module basename in name.  Add comment to
	explain why.  Simplify address check.  Fix formatting in comment.
	* dll_init.h (struct dll): Drop modname and find_by_modname.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::alloc): Add DLL name to fabort output.  Fix
	fabort string in case of bss start.

2012-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/sysmacros.h: Include sys/types.h.

2012-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (mount_info::create_root_entry): Fix format specifier in
	api_fatal message.

2012-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/process.h: Move here from include/cygwin subdir.
	* exec.cc: Change include of process.h to reflect the fact that it's
	now back in include.
	* spawn.cc: Ditto.
	* syscalls.cc: Ditto.

2012-02-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygheap.cc (init_cygheap::manage_console_count): Delete.
	* cygheap.h (init_cygheap::manage_console_count): Ditto.
	(init_cygheap::console_count): Ditto.